All Tests Passed!!

--- a/force-app/main/default/classes/SOQL.cls
+++ b/force-app/main/default/classes/SOQL.cls
@@ -28,9 +28,10 @@ public with sharing class SOQL {
      * @return List of all leads with Id, LastName, Company, Phone, Email
      * Update the corresponding test class and testGetAllLeads method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static List<Lead> question1() {
+    List<Lead> allLeads = [SELECT Id, LastName, Company, Phone, Email FROM Lead];
+    return allLeads;
+    }
 
     /**
      * Question 2
@@ -39,9 +40,10 @@ public with sharing class SOQL {
      * @return A list of Contact records.
      * Update the corresponding test class and testGetContactsByFirstName method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static List<Contact> question2 () {
+        List<Contact> allContacts = [SELECT Id, Name FROM Contact WHERE FirstName = 'John' ];
+        return allContacts;
+    }
 
     /**
      * Question 3
@@ -50,9 +52,14 @@ public with sharing class SOQL {
      * @return A list of Contact Ids.
      * Update the corresponding test class and testGetContactIdsByLastName method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static List<Id> question3() {
+    List<Contact> contacts = [SELECT Id FROM Contact WHERE LastName = 'Smith' OR LastName = 'Jones'];
+    List<Id> question3Ids = new List<Id>();
+    for (Contact c : contacts){
+        question3Ids.add(c.Id);
+    }
+    return question3Ids;
+    }
 
     /**
      * Question 4
@@ -63,9 +70,10 @@ public with sharing class SOQL {
      * @return A list of Opportunities with important opportunities fields
      * Update the corresponding test class and testGetClosedWonOpportunityCountByAccount method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static List<Opportunity> question4 (Id accountId) {
+    List<Opportunity> opportunities = [SELECT Id, Name, StageName, AccountId, CloseDate, Amount FROM Opportunity WHERE AccountId = :accountId AND StageName = 'Closed Won'];
+    return opportunities;
+    }
 
     /**
      * Question 5
@@ -74,9 +82,10 @@ public with sharing class SOQL {
      * @return The Integer count of Account records.
      * Update the corresponding test class and testGetAccountCount method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static Integer question5 () {
+    List<Account> allAccounts = [SELECT Id FROM Account];
+    return allAccounts.size();
+    }
 
     /**
      * Question 6
@@ -85,9 +94,14 @@ public with sharing class SOQL {
      * @return A map of Task Ids to Task records.
      * Update the corresponding test class and testGetTasksDueNextWeek method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static Map<Id, Task> question6 () {
+    Map<Id, Task> taskMap = new Map<Id,Task>();
+    List<Task> taskList = [SELECT Id, OwnerId, Subject, ActivityDate FROM Task WHERE ActivityDate = NEXT_N_DAYS:7];
+    for(Task t : taskList){
+        taskMap.put(t.Id, t);
+    }
+    return taskMap;
+    }
 
     /**
      * Question 7
@@ -96,9 +110,10 @@ public with sharing class SOQL {
      * @return A list of Contact records.
      * Update the corresponding test class and testGetContactsByEmailDomain method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}
+    public static List<Contact> question7() {
+    List<Contact> contacts = [SELECT Id, Name, Email FROM Contact WHERE Email LIKE '%example.com'];
+    return contacts;
+    }
 
     /**
      * Question 8
@@ -108,7 +123,8 @@ public with sharing class SOQL {
      * @return A list of Opportunity records.
      */
     public static List<Opportunity> getOpportunitiesByNameKeyword(String keyword) {
-        return null; // Replace null with the variable you used to store the result
+        List<Opportunity> opportunities = [SELECT Id, Name, StageName, AccountId, CloseDate, Amount FROM Opportunity WHERE Name LIKE :('%' + keyword + '%')];
+        return opportunities; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -117,7 +133,8 @@ public with sharing class SOQL {
      * @return A list of Case records.
      */
     public static List<Case> getFilterCaseOrigins() {
-        return null; // Replace null with the variable you used to store the result
+        List<Case> cases = [SELECT Id, Origin FROM Case WHERE Origin != 'Web' AND Origin != 'Email' AND Origin != ''];
+        return cases; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -130,9 +147,10 @@ public with sharing class SOQL {
      * @return A list of Lead records.
      * Update the corresponding test class and testGetLeadsBySourceOrTitle method to cover this method
      */
-    //[public | private ] [static] data_type method_name (input parameters) {
-    //  The body of the method
-    //}    
+    public static List<Lead> question10 (String leadSource, String keyword) {
+    List<Lead> leads = [SELECT Id, LastName, Company, Phone, Email FROM Lead WHERE LeadSource = :leadSource OR Title LIKE:('%' + keyword + '%')];
+    return leads;
+    }    
 
     /**
      * Question 11
@@ -143,15 +161,16 @@ public with sharing class SOQL {
      */
     public static List<String> getContactNamesByAccount(Id accountId) {
         // Create a list to hold the Contact LastNames
-
+        List<String> lastNames = new List<String>();
         // Query the Contacts
+        List<Contact> contacts = [SELECT Id, LastName FROM Contact WHERE AccountId = :accountId];
         // Loop through each Contact and add the LastName to the list
-        //for () {
-        //    
-        //}
+        for (Contact c:contacts) {
+        lastNames.add(c.LastName);
+        }
 
         // Return the list of Contact LastNames
-        return null; // Replace null with the variable you used to store the result
+        return lastNames; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -163,9 +182,12 @@ public with sharing class SOQL {
      */
     public static Decimal getTotalRevenueByStage(String stage) {
         // Use AggregateQuery to get the total revenue
-
+        AggregateResult results = [SELECT SUM(Amount) totalAmount FROM Opportunity WHERE StageName = :stage OR Amount > 10000];
         // Return the total revenue
-        return null; // Replace null with the variable you used to store the result
+        // Convert the decimal object into a decimal value
+        Decimal totalRevenue = (Decimal) results.get('totalAmount');
+        return totalRevenue;
+         // Replace null with the variable you used to store the result
     }
 
     /**
@@ -174,7 +196,8 @@ public with sharing class SOQL {
      * @return A list of the first 10 Accounts ordered by Name.
      */
     public static List<Account> getFirstTenAccounts() {
-        return null; // Replace null with the variable you used to store the result
+        List<Account> tenAccounts = [SELECT Id, Name FROM Account ORDER BY Name LIMIT 10];
+        return tenAccounts; // Replace null with the variable you used to store the result
     }
     
     /**
@@ -183,7 +206,9 @@ public with sharing class SOQL {
      * @return A list of Opportunities with an Amount greater than 100,000, ordered by CloseDate, and limited to 5 records.
      */
     public static List<Opportunity> getHighValueOpportunities() {
-        return null; // Replace null with the variable you used to store the result
+        List<Opportunity> opportunities = [SELECT Id, Name, CloseDate, Amount FROM Opportunity WHERE Amount > 100000 ORDER BY CloseDate LIMIT 5];
+        return opportunities; // Replace null with the variable you used to store the result
+        // Replace null with the variable you used to store the result
     }
     
     /**
@@ -192,7 +217,8 @@ public with sharing class SOQL {
      * @return A list of Contacts
      */
     public static List<Contact> getBirthdateContacts() {
-        return null; // Replace null with the variable you used to store the result
+        List<Contact> contacts = [SELECT Id, FirstName, LastName, Birthdate FROM Contact ORDER BY Birthdate DESC LIMIT 3];
+        return contacts; // Replace null with the variable you used to store the result
     }
     
     /**
@@ -201,7 +227,8 @@ public with sharing class SOQL {
      * @return A list of Cases
      */
     public static List<Case> getCasesWithStatus() {
-        return null; // Replace null with the variable you used to store the result
+        List<Case> caseList = [SELECT Id, Status, CreatedDate FROM Case WHERE Status = 'Open' ORDER BY CreatedDate LIMIT 10 OFFSET 5];
+        return caseList; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -213,14 +240,15 @@ public with sharing class SOQL {
      */
     public static Set<Id> getCaseIdsByAccount(Id accountId) {
         // Create a set to hold the Case Ids
-
+        SET<Id> caseIdSet = new Set<Id>();
         // Query the Cases
+        List<Case> cases = [SELECT Id FROM Case WHERE AccountId = :accountId];
         // Loop through each Case and add the Id to the set
-        //for () {
-        //    
-        //}
+        for ( case c : cases) {
+        caseIdSet.add(c.Id);
+        }
 
-        return null; // Replace null with the variable you used to store the result
+        return caseIdSet; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -233,11 +261,13 @@ public with sharing class SOQL {
     public static Map<Id, String> getAccountIdsToNamesNotInCountry(String country) {
         // Create a map to hold the Account Ids to Account Names
         Map<Id, String> accountIdsToNames = new Map<Id, String>();
-
         // Query the Accounts
+        List<Account> accounts = [SELECT Id, Name, BillingCountry FROM Account WHERE BillingCountry != :country];
         // Loop through each Account and add the Id and Name to the map
-
-        return null; // Replace null with the variable you used to store the result
+        for( Account a : accounts){
+            accountIdsToNames.put(a.Id, a.Name);
+        }
+        return accountIdsToNames; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -248,7 +278,8 @@ public with sharing class SOQL {
      * @return The Account Name of the Contact.
      */
     public static String getAccountNameForContact(String contactId) {
-        return null; // Replace null with the variable you used to store the result
+        Contact c = [SELECT AccountId, Account.Name FROM Contact WHERE Id = :contactId LIMIT 1];
+        return c.Account.Name; // Replace null with the variable you used to store the result
     }    
 
     /**
@@ -259,7 +290,8 @@ public with sharing class SOQL {
      * @return An Account record with related Opportunities.
      */
     public static Account getAccountAndOpportunitiesFromAccountId(Id accountId) {
-        return null; // Replace null with the variable you used to store the result
+        Account a = [SELECT Name, (SELECT Id, Name FROM Opportunities) FROM Account WHERE Id = :accountId];
+        return a; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -271,11 +303,12 @@ public with sharing class SOQL {
      */
     public static List<Contact> getAccountsWithContactsByState(Id accountId) {
         // Query the Account
-
+        Account a = [SELECT Name, BillingState FROM Account WHERE Id = :accountId];
         // Store the Account's BillingState
-
+        String aBillingState = a.BillingState;
         // Query the Contacts
-        return null; // Replace null with the variable you used to store the result
+        List<Contact> contacts = [SELECT Id, MailingState FROM Contact WHERE MailingState LIKE :aBillingState];
+        return contacts; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -283,25 +316,29 @@ public with sharing class SOQL {
      * Extracts email domains from them leads, then finds Accounts with matching website domains
      * If Lead Email = test@test.com return account with website = www.test.com
      * Example: findAccountsByLeadEmailDomains([set of lead ids]) should return a list of Accounts with matching email domains
-     * @param A set of Lead Ids.
+     * @param leadIds set of Lead Ids.
      * @return A list of Accounts with matching email domains.
      */
     public static List<Account> findAccountsByLeadEmailDomains(Set<Id> leadIds) {
         // Query the Leads
-
+        List<Lead>leads = [SELECT Id, Name, Email FROM Lead WHERE Id IN :leadIds];
         // Create a set of email domains from the Leads
-
+        Set<String>domains = new Set<String>();
         // Loop through each Lead
-
+        for( Lead l : leads){
             // Get the email from the Lead
-
             // Check if the email is not null
-
+            if(l.Email != null){
+                String domain = l.Email.split('@').get(1).toLowerCase();
                 // Add the email domain to the set
+                domains.add('www.' + domain);
+            }
+        }
 
+        List<Account> accounts = [SELECT Website, Id, Name FROM Account WHERE Website IN :domains];
         
         // Query the Accounts
-        return null; // Replace null with the variable you used to store the result
+        return accounts; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -313,19 +350,26 @@ public with sharing class SOQL {
      * @param List of cloned Opportunity Ids
      */
     public static void cloneLineItems(Id origOppId, List<Id> cloneOppIds) {
-        // Query the original Opportunity Line Items
-
+    // Query the original Opportunity Line Items
+        List<OpportunityLineItem> originalLineItems = [SELECT Id, OpportunityId, Quantity, PricebookEntryId, UnitPrice FROM OpportunityLineItem WHERE OpportunityId = :origOppId];
         // Create a list to hold the new line items
-
+        List<OpportunityLineItem> newLineItems = new List<OpportunityLineItem>();
         // Generate a random number between 1 and 3
-
+        Decimal randomNumber = Math.floor(Math.random() * 3) + 1;
         // Loop through each cloned Opportunity Id
-
+        for (Id cloneId : cloneOppIds) {
             // Loop through each original line item
-
+            for (OpportunityLineItem origItem : originalLineItems) {
                 // Clone the original line item and add the random number to the quantity
-
-        // Insert the new line items
+                OpportunityLineItem newItem = origItem.clone(false, true);
+                newItem.OpportunityId = cloneId;
+                newItem.Quantity = origItem.Quantity + (Math.floor(Math.random() * 3) + 1);
+                newLineItems.add(newItem);
+            }
+        }
+            // Loop through each original line item
+                // Clone the original line item and add the random number to the quantity
+        insert newLineItems;
     }
     
     /**
@@ -335,7 +379,8 @@ public with sharing class SOQL {
      * @return A list of filtered Opportunity
      */
     public static List<Opportunity> getOpportunityDetailsForClosedWon() {        
-        return null; // Replace null with the variable you used to store the result
+        List<Opportunity> opps = [SELECT Name, Account.Name, Owner.Name FROM Opportunity WHERE StageName = 'Closed Won'];
+        return opps; // Replace null with the variable you used to store the result
     }
 
     /**
@@ -345,17 +390,31 @@ public with sharing class SOQL {
      */
     public static void setPrimaryContact() {
         //Use the getOpportunityDetailsForClosedWon() method to get the Opportunities
-
+        List<Opportunity> opps = getOpportunityDetailsForClosedWon();
         // Create a set of Account Ids from the Opportunities
-
+        Set<Id> accId = new Set<Id>();
+        for(Opportunity o : opps){
+            accId.add(o.AccountId);
+        }
         // Query the Contacts
-
+        List<Contact> contacts = [SELECT Id, Name, AccountId FROM Contact WHERE AccountId IN :accId ORDER BY CreatedDate];
         // Loop through each Contact and add the Account Id and Contact to the map
-        
+        Map<Id,Contact> contactMap = new Map<Id,Contact>();
+        for(Contact c:contacts){
+            contactMap.put(c.AccountId,c);
+        }
         // Loop through each Opportunity
-
+        for(Opportunity o2 : opps){
+            
+            // Check if the Contact is on the Account
+            if(contactMap.containsKey(o2.AccountId)){
+                // Update the Opportunity primary contact from accountToContactMap
+                o2.Primary_Contact__c = contactMap.get(o2.AccountId).Id;
+            }
+        }
                 // Update the Opportunity primary contact from accountToContactMap
 
         // Update the Opportunities
+        update opps;
     }
 }
